<resources>
    <string name="app_name">Lucky Rush</string>
    <string name="loading">Loading...</string>
    <string name="sign_up_if_you_want_to_save_your_score_please">Sign up if you want to save your score please</string>
    <string name="play">PLAY</string>
    <string name="i_would_like_to_stay_anonymous">I would like to stay anonymous</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="please_choose_sign_in_option">Please choose sign in option</string>
    <string name="sounds">Sounds</string>
    <string name="vibration">Vibration</string>
    <string name="game_1">Game 1</string>
    <string name="game_2">Game 2</string>
    <string name="bonus_game">Bonus Game</string>
    <string name="win">WIN</string>
    <string name="total">Total</string>
    <string name="reset_score">Reset score</string>
    <string name="claim">Claim</string>
    <string name="score_resettled">Score resettled</string>
</resources>