<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_play"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/illustration_button_play_game_1"
        android:textAppearance="@style/TextAppearance.Primary.Bold"
        android:text="@string/play"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_vert" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/illustration_button_play_game_1"
        android:text="@string/settings"
        android:textAppearance="@style/TextAppearance.Primary.Bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_play" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_exit"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/illustration_button_play_game_1"
        android:text="@string/exit"
        android:textAppearance="@style/TextAppearance.Primary.Bold"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_settings" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_privacy"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/privacy_policy"
        android:textAppearance="@style/TextAppearance.Primary.Bold"
        android:textColor="@color/red"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>