<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <com.sinaseyfi.advancedcardview.AdvancedCardView
        android:id="@+id/card_view_game_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        app:background_ColorType="gradient_linear"
        app:background_Gradient_Color0="@color/green1"
        app:background_Gradient_ColorEnd="@color/green2"
        app:background_Type="fill_stroke"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@id/card_view_game_2"
        app:layout_constraintTop_toBottomOf="@id/image_view_back"
        app:stroke_ColorType="gradient_linear"
        app:stroke_Gradient_Color0="@color/red"
        app:stroke_Gradient_ColorEnd="@color/yellow_1"
        app:stroke_Width="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_game_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_1"
                android:textAppearance="@style/TextAppearance.Text.Primary.SemiBold"
                app:layout_constraintBottom_toTopOf="@+id/button_play_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_play_1"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/illustration_button_play_game_1"
                android:text="@string/play"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.Button.Primary.Bold"
                app:backgroundTint="@null"
                app:cornerRadius="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_game_1"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.sinaseyfi.advancedcardview.AdvancedCardView>

    <com.sinaseyfi.advancedcardview.AdvancedCardView
        android:id="@+id/card_view_game_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        app:background_ColorType="gradient_linear"
        app:background_Gradient_Color0="@color/green1"
        app:background_Gradient_ColorEnd="@color/green2"
        app:background_Type="fill_stroke"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toTopOf="@id/button_bonus_game"
        app:layout_constraintTop_toBottomOf="@id/card_view_game_1"
        app:stroke_ColorType="gradient_linear"
        app:stroke_Gradient_Color0="@color/red"
        app:stroke_Gradient_ColorEnd="@color/yellow_1"
        app:stroke_Width="4dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_game_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_2"
                android:textAppearance="@style/TextAppearance.Text.Primary.SemiBold"
                app:layout_constraintBottom_toTopOf="@+id/button_play_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_play_2"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginHorizontal="30dp"
                android:background="@drawable/illustration_button_play_game_1"
                android:text="@string/play"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.Button.Primary.Bold"
                app:backgroundTint="@null"
                app:cornerRadius="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_view_game_2"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.sinaseyfi.advancedcardview.AdvancedCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_bonus_game"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/bonus_game"
        android:textAppearance="@style/TextAppearance.Button.Primary.Bold"
        android:textColor="@color/red"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>