<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main">

    <com.sinaseyfi.advancedcardview.AdvancedCardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:background_ColorType="gradient_linear"
        app:background_Gradient_Color0="@color/dark"
        app:background_Type="fill_stroke"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:stroke_ColorType="gradient_linear"
        app:stroke_Gradient_Color0="@color/red"
        app:stroke_Gradient_ColorEnd="@color/yellow"
        app:stroke_Width="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/laila_600"
                android:gravity="center"
                android:lineSpacingExtra="15dp"
                android:lineSpacingMultiplier="0.65"
                android:text="@string/sign_up_if_you_want_to_save_your_score_please"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.sinaseyfi.advancedcardview.AdvancedCardView
                android:id="@+id/card_view_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:background_ColorType="gradient_linear"
                app:background_Gradient_Color0="@color/white_17"
                app:background_Gradient_ColorEnd="@color/white_9"
                app:background_Type="fill_stroke"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@id/text_view_title"
                app:stroke_ColorType="gradient_linear"
                app:stroke_Gradient_Color0="@color/white_60"
                app:stroke_Gradient_Color1="@color/white_30"
                app:stroke_Width="1dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="4dp"
                    app:boxBackgroundMode="none">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/laila_400"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        tools:text="test@gmail.com.ua" />
                </com.google.android.material.textfield.TextInputLayout>
            </com.sinaseyfi.advancedcardview.AdvancedCardView>

            <com.sinaseyfi.advancedcardview.AdvancedCardView
                android:id="@+id/card_view_check"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                app:background_ColorType="gradient_linear"
                app:background_Gradient_Color0="@color/white_17"
                app:background_Gradient_ColorEnd="@color/white_9"
                app:background_Type="fill_stroke"
                app:cornerRadius="12dp"
                app:layout_constraintStart_toStartOf="@id/card_view_email"
                app:layout_constraintTop_toBottomOf="@id/card_view_email"
                app:stroke_ColorType="gradient_linear"
                app:stroke_Gradient_Color0="@color/red"
                app:stroke_Gradient_Color1="@color/yellow"
                app:stroke_Width="4dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_view_check"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="4dp"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_check" />
            </com.sinaseyfi.advancedcardview.AdvancedCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/text_view_anonymous"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/laila_400"
                android:gravity="center"
                android:lineSpacingExtra="15dp"
                android:lines="1"
                android:text="@string/i_would_like_to_stay_anonymous"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintBottom_toBottomOf="@id/card_view_check"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/card_view_check"
                app:layout_constraintTop_toTopOf="@id/card_view_check" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_play"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/illustration_button_play_game_1"
                android:textAppearance="@style/TextAppearance.Button.Primary.Bold"
                android:text="@string/play"
                app:backgroundTint="@null"
                app:layout_constraintTop_toBottomOf="@id/card_view_check" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.sinaseyfi.advancedcardview.AdvancedCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
