<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/illustration_bg_game_2">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_win"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/illustration_score_bg_game_2"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_1"
        app:layout_constraintEnd_toStartOf="@id/container_total"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_win_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="1"
            android:text="@string/win"
            android:textAppearance="@style/TextAppearance.Text.Primary.Bold"
            app:autoSizeMaxTextSize="30sp"
            app:autoSizeTextType="uniform" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_win"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="1"
            android:textAppearance="@style/TextAppearance.Text.Primary.Bold"
            app:autoSizeMaxTextSize="30sp"
            app:autoSizeTextType="uniform"
            tools:text="4214124" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_total"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="15dp"
        android:background="@drawable/illustration_score_bg_game_2"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/container_win"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_total_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="1"
            android:text="@string/total"
            android:textAppearance="@style/TextAppearance.Text.Primary.Bold"
            app:autoSizeMaxTextSize="30sp"
            app:autoSizeTextType="uniform" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_total"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:lines="1"
            android:textAppearance="@style/TextAppearance.Text.Primary.Bold"
            app:autoSizeMaxTextSize="30sp"
            app:autoSizeTextType="uniform"
            tools:text="4214124" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/illustration_slot_bg_game_2"
        android:paddingVertical="40dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_2"
        app:layout_constraintDimensionRatio="1.0691823899371069182389937106918"
        app:layout_constraintTop_toBottomOf="@id/guideline_1">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_slots_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.115" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_slots_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.36" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_slots_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.635" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_slots_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.88" />

        <com.lucky.rush.ui.view.SlotView
            android:id="@+id/slot_view_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_slots_2"
            app:layout_constraintStart_toStartOf="@id/guideline_slots_1" />

        <com.lucky.rush.ui.view.SlotView
            android:id="@+id/slot_view_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_slots_3"
            app:layout_constraintStart_toStartOf="@id/guideline_slots_2" />

        <com.lucky.rush.ui.view.SlotView
            android:id="@+id/slot_view_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_slots_4"
            app:layout_constraintStart_toStartOf="@id/guideline_slots_3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_decrease"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_bet"
        app:layout_constraintEnd_toStartOf="@id/text_view_bet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_view_bet"
        app:srcCompat="@drawable/ic_arrow_down" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_view_bet"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginVertical="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/illustration_score_bg_game_2"
        android:gravity="center"
        android:lines="1"
        android:padding="25dp"
        android:textAppearance="@style/TextAppearance.Text.Primary.Bold"
        app:autoSizeMaxTextSize="30sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/button_play"
        app:layout_constraintEnd_toStartOf="@id/image_view_increase"
        app:layout_constraintStart_toEndOf="@id/image_view_decrease"
        app:layout_constraintTop_toBottomOf="@id/guideline_2"
        app:layout_constraintVertical_weight="3"
        tools:text="932199" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_increase"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_bet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_view_bet"
        app:layout_constraintTop_toTopOf="@+id/text_view_bet"
        app:srcCompat="@drawable/ic_arrow_up" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_play"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/illustration_bg_button_play"
        android:paddingTop="34dp"
        android:text="@string/play"
        android:textAppearance="@style/TextAppearance.Button.Primary.Bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_bet"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintVertical_weight="4" />
</androidx.constraintlayout.widget.ConstraintLayout>